--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-Hello, World
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Practice of Web-Site Creation</title>
+<link href="https://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
+<link href="css/style_index.css" rel="stylesheet">
+</head>
+<body id="index">
+  
+  <!-- header始まり -->
+  <header>
+    <div class="logo">
+      <a href="index.html"><img src="images/logo.png" alt="Portforio"></a>
+    </div>
+    <nav>
+      <ul class="global-nav">
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- header終わり -->
+  
+  <!-- wrap始まり -->
+  <div id="wrap">
+    <div class="content">
+      <h1>I'm MatLaser </h1>
+      <p>このサイトは，現在大学院に通う一学生が練習として作成したものです。
+      <br> This site was created as an exercise of Web coading by a student of Tohoku University's graduate school. </p>
+      <p class="btn"><a href="about.html">Who is MatLaser?</a></p>
+    </div>
+  </div>
+  <!-- wrap終わり -->
+  
+  <!-- footer始まり -->
+  <footer>
+    <small>(C)2020 MatLaser.</small>
+  </footer>
+  <!-- footer終わり -->
+  
+</body>
+</html>
