--- a/about.html
+++ b/about.html
@@ -26,37 +26,47 @@
   <div id="wrap">
     <div class="content">
       <div class="main-center">
-        <h1>Profile</h1>
-        <img src="images/My-Icon.jpg" alt="プロフィール画像" class="profile-image">
-        <p>愛知県出身。現在は大学院にて、レーザーに関する研究を行っている。
-        <br>最初は修士研究で使えたら便利だなという程度の気持ちでプログラミング（Python）を始めたが、その記述の容易さに魅了され、昔は嫌いだった <s>(大学ではいきなりCから習ったので無理もない...)</s> プログラミングが今では楽しくて仕方ない。
-        <br>現在は機械学習や深層学習、アルゴリズム、データサイエンスの勉強に注力しているが <s>(修士研究に関する勉強もしないと...)</s> 、Webにも興味があり、その勉強の一環として本サイトを作成した。
-        <br>将来は自分のドメインである材料学と情報テクノロジー（AI・ビッグデータ）を組み合わせた新規アイデアの創出に努めたい。
-        <br>
-        <br>趣味：カラオケ、筋トレ、料理、ギター、ドラム、競プロ
-        <br>特技：空手
-        </p>
+
+        <section class="profile">
+          <div class="profile">
+            <h1>Profile</h1>
+            <img src="images/My-Icon.jpg" alt="プロフィール画像" class="profile-image">
+            <p>愛知県出身。現在は大学院にて、レーザーに関する研究を行っている。
+            <br>最初は修士研究で使えたら便利だなという程度の気持ちでプログラミング（Python）を始めたが、その記述の容易さに魅了され、昔は嫌いだった <s>(大学ではいきなりCから習ったので無理もない...)</s> プログラミングが今では楽しくて仕方ない。
+            <br>現在は機械学習や深層学習、アルゴリズム、統計学等の勉強に注力しているが <s>(修士研究に関する勉強もしないと...)</s> 、Web技術にも興味があり、その勉強の一環として本サイトを作成した。
+            <br>将来は自分のドメインである材料学とIT（AI・ビッグデータ）を組み合わせた新規アイデアの創出に努めたいと思っている。
+            <br>
+            <br>趣味：カラオケ、筋トレ、料理、ギター、ドラム、バイク、競プロ
+            <br>特技：空手
+            </p>
+          </div>
+        </section> 
+
         <section class="profile clearfix">
           <div class="qualification">
             <h2 class="icon">Qualification</h2>
             <li>TOEIC 890点</li>
             <li>実用技能英語検定 準1級</li>
             <li>統計検定 2級</li>
-            <br>
           </div>
-        <section class="Educational_backgroud">
-          <h2 class="icon">Educational backgroud</h2>
-          <table>
-            <tr>
-              <th>2019年3月</th>
-              <td>One of the 旧帝国大学 卒業</td>
-            </tr>
-            <tr>
-              <th>2021年3月</th>
-              <td>One of the 旧帝国大学大学院 修了(予定)</td>
-            </tr>
-          </table>
         </section>
+
+        <section class="Educational_backgroud">
+          <div class="Educational_backgroud">
+            <h2 class="icon">Educational backgroud</h2>
+            <table>
+              <tr>
+                <th>2019年3月</th>
+                <td>One of the 旧帝国大学 卒業</td>
+              </tr>
+              <tr>
+                <th>2021年3月</th>
+                <td>One of the 旧帝国大学大学院 修了(予定)</td>
+              </tr>
+            </table>
+          </div>
+        </section>
+
       </div>
     </div>
   </div>
