--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="content">
       <h1>I'm MatLaser </h1>
       <p>このサイトは，現在大学院に通う一学生が練習として作成したものです。
-      <br> This site was created as an exercise of Web coading by a student of Tohoku University's graduate school. </p>
+      <br>This site was created as an exercise of Web coading by a graduate student at one of the "Kyuteikoku" University. </p>
       <p class="btn"><a href="about.html">Who is MatLaser?</a></p>
     </div>
   </div>
